[gd_scene load_steps=2 format=3 uid="uid://dphwtkh030vsb"]

[ext_resource type="Script" path="res://combat_entry.gd" id="1_wek2e"]

[node name="CombatEntry" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wek2e")

[node name="CombatRankNrLabel" type="Label" parent="."]
layout_mode = 2
text = "1"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Spies"

[node name="YourUnitsPreviewHBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="EnemyPreviewUnitsHBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
